<resources>
    <string name="facebook_app_id">597616363744470</string>
    <string name="app_name">Quartets</string>
    <string name="recordes">Table of records</string>
    <string name="wellcome">Welcome</string>
    <string name="openGroup">Open new group</string>
    <string name="addPlayer">Add new player</string>
    <string name="remove">Remove</string>
    <string name="newGame">Start new Game</string>
    <string name="exit">Exit</string>
    <string name="startGame">Start Game</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="logIn">Log In</string>
    <string name="addNewCards">Add new cards</string>
    <string name="logOut">Log Out</string>
    <string name="chooseQuartets">Choose Quartets</string>
    <string name="add">Add</string>
    <string name="exitWarning">Are you sure you want to exit?</string>
    <string name="ShowMyCards">Show My Cards</string>
    <string name="changeLang">Change lang</string>
    <string name="LOCALE_IW">iw</string>
    <string name="LOCALE_ENGLISH">en</string>
    <string name="CreateUser">Creat User</string>
    <string name="back">Back</string>
    <string name="loading">Loading Componutes...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="OpenRoom">Open Room</string>
    <string name="roomName">Room Name</string>
    <string name="createRoom">Create Room</string>
    <string name="JoinToRoom">Join Room</string>
    <string name="EnterRoomName">Enter Room Name</string>
    <string name="Back">Back</string>
    <string name="repassword">Re-Password</string>
    <string name="send">send card</string>
    <string name="receive">receive card</string>
    <string name="choose">Choose</string>
    <string name="string_choose_file">Choose file</string>
    <string name="string_upload_image">Upload file</string>
    <string name="string_view_image">View image</string>
    <string name="get_All_person">Get Persons</string>
    <string name="set_person">Set Persons</string>
    <string name="user_id">user id</string>
    <string name="user_age">user age</string>
    <string name="addPerson_dialog_title">add new person</string>
    <string name="addPerson_dialog_masge">insert person data</string>
    <string name="category">Category</string>
    <string name="item1">item1</string>
    <string name="updateCard">Update</string>
    <string name="update_Card_dialog_title">Update Card</string>
    <string name="update_Card_masage">insert card data</string>
    <string name="card_name">card name</string>
    <string name="change_image">Change image</string>


    <string-array name="card_click_menu">
        <item>send card</item>
        <item>receive card</item>
    </string-array>

    <string-array name="my_card">
        <item>Delete</item>
        <item>Edit</item>
    </string-array>

    <string name="room_name">Room name</string>
    <string name="open_room_dialog_title">@string/OpenRoom</string>
    <string name="open_room_dialog_message">Enter room name</string>

    <string name="please_wait">Please wait</string>
    <string name="waiting_for_players">Waiting for other players...</string>

    <string name="room_name_in_use">Room name already in use</string>
    <string name="connection_error">Error occurred - check internet connection</string>

</resources>
