<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:hint="@string/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PersonName"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:hint="@string/user_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PersonID"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:hint="@string/user_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/PersonAge"
        android:layout_gravity="center_horizontal" />
</LinearLayout>