<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.yosef.finalproject.SignUp"
    android:transitionGroup="false"
    android:touchscreenBlocksFocus="false"
    android:background="#259DCB">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp">

        <EditText
            android:id="@+id/UserName"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/userName"
            android:inputType="text"
            android:layout_margin="8dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            android:layout_marginTop="30dp"
            />

        <EditText
            android:id="@+id/password"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/password"
            android:inputType="text"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            />

        <EditText
            android:id="@+id/repassword"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/repassword"
            android:inputType="text"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/edit_text"
            />

        <Button
            android:background="@drawable/button"
            android:onClick="addNewUserToDB"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:text="@string/CreateUser"
            android:id="@+id/creatUser"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/Background"
            android:layout_alignEnd="@+id/Background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"

            android:textSize="17dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:layout_gravity="center_horizontal">


        </LinearLayout>



        <Button
            android:background="@drawable/button"
            android:onClick="goBack"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            android:text="@string/Back"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/Background"
            android:layout_alignEnd="@+id/Background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:textSize="17dp" />

    </LinearLayout>
</RelativeLayout>